# torchcheck

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: unittest-torchcheck.yml
test/: test_asserts.py  test_batched_index_gen.py  test_batched_index_padded.py  test_batched_masked_select.py  test_ops.py  test_symbolic_asserts.py  test_t5_attention.py
test/tools/: test.py
torch_check/: __init__.pyi  index.h  main.cpp  shape.cpp  shape.h
torchcheck/: __init__.py  __init__.pyi  asserts.cpp  asserts.h  attention.py  checks.py  config.py  index.cpp  main.cpp  return_types.py  torchcheck.py
torchcheck/C/: __init__.pyi
torchcheck/csrc/: asserts.cpp  asserts.h  index.cpp  index.h  main.cpp
torchcheck/csrc/attention/: attention_t5.h
torchcheck/impl/: __init__.py  asserts.py  index.py
torchcheck/ops/: __init__.py  expand.py  inclusive_cumsum.py  unsqueeze.py
torchcheck/pybind/: torch_dtype.h
